upgrade to java 11; plugin version upgrades